[gd_scene load_steps=12 format=2]

[ext_resource path="res://art/enemies/bomb/boom-2.png" type="Texture" id=1]
[ext_resource path="res://art/enemies/bomb/bomb-start.png" type="Texture" id=2]
[ext_resource path="res://art/enemies/bomb/splat-2.png" type="Texture" id=3]
[ext_resource path="res://art/enemies/bomb/splat-3.png" type="Texture" id=4]
[ext_resource path="res://art/enemies/bomb/bomb-moving.png" type="Texture" id=5]
[ext_resource path="res://art/enemies/bomb/boom-1.png" type="Texture" id=6]
[ext_resource path="res://art/enemies/bomb/splat-1.png" type="Texture" id=7]
[ext_resource path="res://art/enemies/bomb/Bomb.gd" type="Script" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 2.0

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "moving",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 1 ) ],
"loop": true,
"name": "boom",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "splat",
"speed": 24.0
} ]

[node name="Bomb" type="KinematicBody2D"]
collision_layer = 2147483680
collision_mask = 2147483769
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 121

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2( 0.2, 0.2 )
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
rotation = 3.14159
frames = SubResource( 3 )
animation = "moving"
playing = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3

[node name="SpeedTimer" type="Timer" parent="."]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="SpeedTimer" to="." method="_on_SpeedTimer_timeout"]
